<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollContainerDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clipToPadding="false"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Botón cerrar arriba a la derecha -->
        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_detail"
            android:padding="8dp"/>

        <!-- Fila con el nombre a la izq. y la imagen a la der. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/detailConfidantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confidant_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"/>

            <ImageView
                android:id="@+id/detailConfidantImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/confidant_card"/>
        </LinearLayout>

        <!-- Texto detallado -->
        <TextView
            android:id="@+id/detailConfidantInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confidant_information"
            android:textSize="14sp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>


